IE8 layout breakage fix (updated)

--- a/sites/all/themes/cfe/css/styles.css
+++ b/sites/all/themes/cfe/css/styles.css
@@ -870,7 +870,9 @@ body.page-frontpage .views-field-field-published {
 	margin: 0 0px 10px 10px;
 	padding: 0;
 }
-
+.linkOnList a {
+	font-weight: bold;
+}
 /* ENTR407 Videos */
 .node-entr407-recordings  .field-type-datetime,
 .view-entr407-videos .views-field-title {
@@ -943,8 +945,8 @@ body.page-frontpage .views-field-field-published {
 	list-style: none;
 	margin: 0;
 	display: inline-block;
-	width: 150px;
-	height: 20px;
+	width: 200px;
+	height: auto;
 	padding-top: 1px;
 	padding-bottom: 1px;
 	font-weight: normal;
